testcases/project_3/14.param_main.c
void main(int argv) // error
{
}
